[package]
name = "btree-range-map"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc-traits = { version = "0.4.0", features = ["nightly"] }
btree-slab = { path = "../btree-slab" }
slab = "*"