[package]
name = "btree-range-map"
version = "0.2.1"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"

categories = ["data-structures"]
keywords = ["btree", "range", "map", "set"]
description = "B-tree range map implementation"
repository = "https://github.com/timothee-haudebourg/btree-range-map"
documentation = "https://docs.rs/btree-range-map"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
cc-traits = "0.8.0"
btree-slab = "0.4.0"
slab = "0.4.5"